# The-Third-Eye

./: README.md  app.py  location.csv  main.py  pyproject.toml  requirements.txt
Read Me Docs/: installation.md
database/: all_logs.csv  database.db  schema.md  schema.txt
installation/: requirements.txt
static/assets/css/: style.css
surveillance_system/: camera.py  database.py  person.py  user.py
templates/: add_person.html  add_user.html  admin_dashboard.html  base.html  index.html  individual_log.html  login.html  logs.html  manage_user.html  user_dashboard.html
tests/: fetch_csv.py  find_faces.py  find_the_person.py  image_database.db  main.py  retrieve_image.py  upload_image.py
