[tool.poetry]
name = "The-Third-Eye"
version = "0.1.0"
description = "Find and log missing person"
authors = ["Gourav R <gouravrchandra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
blinker = "1.7.0"
click = "8.1.7"
cmake = "3.27.7"
colorama = "0.4.6"
face-recognition = "1.3.0"
face-recognition-models = "0.3.0"
Flask = "3.0.0"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.3"
numpy = "1.26.2"
opencv-python = "4.8.1.78"
Pillow = "10.1.0"
Werkzeug = "3.0.1"

[[tool.poetry.dependencies]]
file = { path = "dlib-19.24.1-cp311-cp311-win_amd64.whl" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
